# django_postgre_docker

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
config/: settings.py
mysite/: settings.py  urls.py
