[project]
name = "django-postgre-docker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "django-admin-interface>=0.30.1",
    "django-colorfield>=0.14.0",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "psycopg-binary>=3.2.9",
    "uvicorn>=0.35.0",
]
